Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjIntObjField.quorum
class Main
    Integer v
    v:SetValue(5)
    action Main
        Test(v)
    end

    action Test(Text var)
    end
end
